# ssh-mitm

./: .bumpversion.cfg  .gitignore  .readthedocs.yaml  AppImageBuilder.yml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  README.zh-cn.md  SECURITY.md  bash_completion  check_pylint.sh  pyproject.toml  requirements-dev.txt  requirements.in  requirements.txt  rtd.css  setup.cfg  setup.py  snapcraft.yaml  ssh-mitm.1  sshmitm.ini  test.ini
.githooks/: pre-push
.github/ISSUE_TEMPLATE/: 1-bug-report.yml  2-proposal.yml  config.yml
.github/workflows/: appimage.yml  codeql-analysis.yml  main.yml  python-package.yml  python-publish.yml
appimage/: AppRun  appimage.ini  build.sh  environment.sh  ssh-mitm.desktop  startapp.py
doc/: CVE-2016-20012.rst  CVE-2018-15473.rst  CVE-2018-15599.rst  CVE-2018-15919.rst  CVE-2018-20685.rst  CVE-2019-16905.rst  CVE-2019-6109.rst  CVE-2019-6110.rst  CVE-2019-6111.rst  CVE-2020-12062.rst  CVE-2020-14002.rst  CVE-2020-14145.rst  CVE-2020-15778.rst  CVE-2021-28041.rst  CVE-2021-33500.rst  CVE-2021-36367.rst  CVE-2021-36368.rst  CVE-2021-36369.rst  CVE-2021-36370.rst  CVE-2021-41617.rst  CVE-2022-29154.rst  advanced-usage.rst  alternatives.rst  api.rst  authentication.rst  conf.py  filetransfer.rst  fingerprint.rst  index.rst  install.rst  installation.rst  jumphosts.rst  legal.rst  llms.txt  plugins.rst  portforwarding.rst  puttydos.rst  quickstart.rst  requirements.txt  robots.txt  (+13 more)
doc/_static/: custom.css
doc/_templates/: layout.html  search.html
doc/audit_guide/: attack_scenarios.rst  authentication.rst  file_transfer.rst  fingerprint.rst  plugin_browser.rst  portforwarding.rst  powershell.rst  rsync.rst  sessions.rst  sshagent.rst  transparent.rst  trivialauth.rst
doc/develop/: api.rst  auth-testing.rst  changelog.md  contributing.rst  docs.rst  index.rst  issue.rst  plugins.rst  scenario.rst  scenario_framework.rst  setup.rst
doc/get_started/: configuration.rst  faq.rst  file_transfer.rst  index.rst  installation.rst  issue.rst  legal.rst  plugin_browser.rst  portforwarding.rst  scenario.rst  terminal_session.rst  tutorial.rst
doc/user_guide/: advanced-usage.rst  attack_scenarios.rst  authentication.rst  client_audit.rst  configuration.rst  file_transfer.rst  fingerprint.rst  git.rst  index.rst  mosh.rst  netconf.rst  portforwarding.rst  powershell.rst  publickey-hostbound.rst  sessions.rst  sshagent.rst  transparent.rst  trivialauth.rst
doc/vulnerabilities/: CVE-2016-20012.rst  CVE-2018-15473.rst  CVE-2018-15599.rst  CVE-2018-15919.rst  CVE-2018-20685.rst  CVE-2019-16905.rst  CVE-2019-6109.rst  CVE-2019-6110.rst  CVE-2019-6111.rst  CVE-2020-12062.rst  CVE-2020-14002.rst  CVE-2020-14145.rst  CVE-2020-15778.rst  CVE-2021-28041.rst  CVE-2021-33500.rst  CVE-2021-36367.rst  CVE-2021-36368.rst  CVE-2021-36369.rst  CVE-2021-36370.rst  CVE-2021-3755.rst  CVE-2021-41617.rst  CVE-2022-29154.rst  CVE-2022-38336.rst  CVE-2022-38337.rst  CVE-2022-46176.rst  CVE-2023-25136.rst  CVE-2023-38408.rst  CVE-2026-60000.rst  dropbear.rst  findings.rst  index.rst  midnightcommander.rst  mobaxterm.rst  openssh.rst  putty.rst  rsync.rst  rust-lang.rst  upstream_contributions.rst  vuln_putty.rst  vuln_rsync.rst  (+1 more)
man1/: ssh-mitm-audit.1  ssh-mitm-server.1  ssh-mitm.1
snap/: snapcraft.yaml
snap/gui/: ssh-mitm.desktop
ssh_proxy_server/: __entrypoints__.py  __main__.py  __version__.py  authentication.py  cli.py  client.py  console.py  exceptions.py  gui.py  multisocket.py  server.py  server_interface.py  server_stubs.py  session.py  update.py
ssh_proxy_server/audit/: cli.py
ssh_proxy_server/clients/: sftp.py  ssh.py
ssh_proxy_server/data/: client_vulnerabilities.yml
ssh_proxy_server/forwarders/: __init__.py  agent.py  base.py  scp.py  sftp.py  ssh.py  tunnel.py  tunnel_fwd.py
ssh_proxy_server/interfaces/: __init__.py  server.py  sftp.py
ssh_proxy_server/network/: handlers.py  multisocket.py
ssh_proxy_server/plugins/: sftp_replace.py
ssh_proxy_server/server/: __init__.py  cli.py
ssh_proxy_server/socks/: server.py
ssh_proxy_server/tools/: askpass.py
ssh_proxy_server/workarounds/: dropbear.py
sshmitm/: __entrypoints__.py  __init__.py  __main__.py  __version__.py  appimage.py  authentication.py  cli.py  config.py  console.py  exceptions.py  exec_handlers.py  logger.py  logging.py  moduleparser.py  monkey.py  multisocket.py  project_metadata.py  session.py  state.py  update.py  utils.py
sshmitm/apps/: mosh.py
sshmitm/audit/: cli.py
sshmitm/clients/: netconf.py  powershell.py  sftp.py  ssh.py
sshmitm/commands/: audit.py  check_publickey.py  mosh.py  plugins.py  plugins_tui.py  server.py  venv.py
sshmitm/contrib/: argparse.py  utils.py
sshmitm/core/: agent.py  authentication.py  compat.py  exceptions.py  modules.py  multisocket.py  netconf.py  scp.py  server.py  session.py  sftp.py  ssh.py  sshkeys.py  tunnel.py
sshmitm/data/: client_info.yml  client_vulnerabilities.yml  default.ini  plugins_browser.tcss
sshmitm/forwarders/: agent.py  base.py  exec.py  netconf.py  powershell.py  scp.py  sftp.py  ssh.py  tunnel.py
sshmitm/interfaces/: __init__.py  server.py  sftp.py
sshmitm/logging/: __init__.py
sshmitm/mockserver/: __init__.py  __main__.py  _agent.py  _interfaces.py  _runner.py
sshmitm/moduleparser/: __init__.py  baseparser.py  colors.py  enhanced_configparser.py  exceptions.py  formatter.py  modules.py  parser.py  plugininfo.py  utils.py
sshmitm/server/: __init__.py  cli.py
sshmitm/tools/: askpass.py  log_collection.py
sshmitm/tutorial/: __init__.py  __main__.py  _client_actions.py  _conditions.py  _context.py  _definitions.py  _event_processor.py  _events.py  _loader.py  _progress.py  _requirements.py  _runner.py  _server_config.py  _session.py  _web.py  cli.py
sshmitm/workarounds/: auth_handler.py  (+4 more)
tcp_proxy_server/: __entrypoints__.py  chains.py  cli.py  exceptions.py  forwarders.py  handlers.py  proxy.py  proxymanager.py  socks.py
tests/: README.md  test_exec_handler_filter.py  test_exec_handler_registry.py  test_netconf_framing.py  test_paramiko_compat.py  test_pubkey_auth.py
(+178 files in other folders)
