[build-system]
requires = ["hatchling", "hatch-requirements-txt"]
build-backend = "hatchling.build"

[project]
name = "ssh-mitm"
dynamic = ["version", "dependencies"]
authors = [
    {name = "SSH-MITM Dev-Team", email = "support@ssh-mitm.at"}
]
maintainers = [
  {name = "Manfred Kaiser", email = "manfred.kaiser@ssh-mitm.at"}
]
description = "ssh mitm server for security audits supporting publickey authentication, session hijacking and file manipulation"
readme = "README.md"
license = {file = "LICENSE"}
keywords = [
    "ssh",
    "proxy",
    "mitm",
    "network",
    "security",
    "audit",
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Topic :: System :: Networking",
    "Development Status :: 5 - Production/Stable",
]
requires-python = ">= 3.8"

[project.urls]
Homepage = "https://www.ssh-mitm.at"
Documentation = "https://docs.ssh-mitm.at"
Changelog = "https://github.com/ssh-mitm/ssh-mitm/blob/master/CHANGELOG.md"
Source = "https://github.com/ssh-mitm/ssh-mitm"
Tracker = "https://github.com/ssh-mitm/ssh-mitm/issues"

[project.scripts]
ssh-mitm = "sshmitm.cli:main"
ssh-mitm-askpass = "sshmitm.tools.askpass:main"

[project.entry-points."BaseSession"]
base = "sshmitm.session:Session"

[project.entry-points."Authenticator"]
passthrough = "sshmitm.authentication:AuthenticatorPassThrough"

[project.entry-points."BaseServerInterface"]
base = "sshmitm.interfaces.server:ServerInterface"

[project.entry-points."SSHBaseForwarder"]
base = "sshmitm.forwarders.ssh:SSHForwarder"
mirrorshell = "sshmitm.plugins.ssh.mirrorshell:SSHMirrorForwarder"
noshell = "sshmitm.plugins.ssh.noshell:NoShellForwarder"

[project.entry-points."SCPBaseForwarder"]
base = "sshmitm.forwarders.scp:SCPForwarder"
debug_traffic = "sshmitm.plugins.scp.debug_traffic:SCPDebugForwarder"
inject_file = "sshmitm.plugins.scp.inject_file:SCPInjectFile"
replace_file = "sshmitm.plugins.scp.replace_file:SCPReplaceFile"
store_file = "sshmitm.plugins.scp.store_file:SCPStorageForwarder"
replace-command = "sshmitm.plugins.scp.rewrite_command:SCPRewriteCommand"
CVE-2022-29154 = "sshmitm.plugins.scp.cve202229154:CVE202229154"

[project.entry-points."BaseSFTPServerInterface"]
base = "sshmitm.interfaces.sftp:SFTPProxyServerInterface"

[project.entry-points."SFTPHandlerBasePlugin"]
base = "sshmitm.forwarders.sftp:SFTPHandlerPlugin"
replace_file = "sshmitm.plugins.sftp.replace_file:SFTPProxyReplaceHandler"
store_file = "sshmitm.plugins.sftp.store_file:SFTPHandlerStoragePlugin"

[project.entry-points."RemotePortForwardingBaseForwarder"]
base = "sshmitm.forwarders.tunnel:RemotePortForwardingForwarder"
inject = "sshmitm.plugins.tunnel.injectservertunnel:InjectableRemotePortForwardingForwarder"

[project.entry-points."LocalPortForwardingBaseForwarder"]
base = "sshmitm.forwarders.tunnel:LocalPortForwardingForwarder"
socks = "sshmitm.plugins.tunnel.socks:SOCKSTunnelForwarder"
socks4 = "sshmitm.plugins.tunnel.socks4:SOCKS4TunnelForwarder"
socks5 = "sshmitm.plugins.tunnel.socks5:SOCKS5TunnelForwarder"

[tool.hatch.version]
path = "sshmitm/__init__.py"

[tool.hatch.metadata.hooks.requirements_txt]
files = ["requirements.in"]

[tool.hatch.build]
include = [
    "sshmitm/**/*.py",
    "sshmitm/data/*.*",
]

[tool.hatch.envs.lint]
detached = false
dependencies = [
    "flake8",
    "Flake8-pyproject",
    "mypy",
    "pylint",
]

[tool.hatch.envs.lint.scripts]
check = [
    "flake8 sshmitm",
    "pylint sshmitm",
    "mypy sshmitm",
]

[tool.hatch.envs.docs]
detached = false

[tool.hatch.envs.docs.scripts]
build = [
    "pip install -r doc/requirements.txt",
    "sphinx-apidoc -T -e -M -d 1 -o doc/api sshmitm",
    "sphinx-build doc build/html",
]

[tool.hatch.envs.appimage]
detached = false

[tool.hatch.envs.appimage.scripts]
build = [
    "appimage/build.sh",
]

[tool.flake8]
ignore = ["E501", "W503"]

[tool.mypy]
strict = true
install_types = true
non_interactive = true

[tool.pylint]
disable = [
    "duplicate-code",
    "line-too-long",
    "missing-module-docstring",
    "missing-class-docstring",
    "missing-function-docstring",
    "fixme",
    "too-few-public-methods",
    "too-many-branches",
    "too-many-instance-attributes",
    "too-many-statements",
    "too-many-locals",
    "too-many-return-statements"
]
