[build-system]
requires = ["hatchling", "hatch-requirements-txt"]
build-backend = "hatchling.build"

[project]
name = "ssh-mitm"
dynamic = ["version", "dependencies"]
authors = [
    {name = "SSH-MITM Dev-Team", email = "support@ssh-mitm.at"}
]
maintainers = [
  {name = "Manfred Kaiser", email = "manfred.kaiser@ssh-mitm.at"}
]
description = "ssh mitm server for security audits supporting publickey authentication, session hijacking and file manipulation"
readme = "README.md"
license = {file = "LICENSE"}
keywords = [
    "ssh",
    "proxy",
    "mitm",
    "network",
    "security",
    "audit",
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Topic :: System :: Networking",
    "Development Status :: 5 - Production/Stable",
]
requires-python = ">= 3.8"

[project.urls]
Homepage = "https://www.ssh-mitm.at"
Documentation = "https://docs.ssh-mitm.at"
Changelog = "https://github.com/ssh-mitm/ssh-mitm/blob/master/CHANGELOG.md"
Source = "https://github.com/ssh-mitm/ssh-mitm"
Tracker = "https://github.com/ssh-mitm/ssh-mitm/issues"

[project.scripts]
ssh-mitm = "sshmitm.cli:main"
ssh-mitm-askpass = "sshmitm.tools.askpass:main"

[project.entry-points."SubCommand"]
server = "sshmitm.server.cli:SSHServerModules"
audit = "sshmitm.audit.cli:Audit"
check-publickey = "sshmitm.commands.check_publickey:CheckPublickey"

[project.entry-points."BaseSession"]
base = "sshmitm.session:Session"

[project.entry-points."Authenticator"]
passthrough = "sshmitm.authentication:AuthenticatorPassThrough"

[project.entry-points."BaseServerInterface"]
base = "sshmitm.interfaces.server:ServerInterface"

[project.entry-points."SSHBaseForwarder"]
mirrorshell = "sshmitm.plugins.ssh.mirrorshell:SSHMirrorForwarder"

[project.entry-points."SCPBaseForwarder"]
debug_traffic = "sshmitm.plugins.scp.debug_traffic:SCPDebugForwarder"
inject_file = "sshmitm.plugins.scp.inject_file:SCPInjectFile"
replace_file = "sshmitm.plugins.scp.replace_file:SCPReplaceFile"
store_file = "sshmitm.plugins.scp.store_file:SCPStorageForwarder"
replace-command = "sshmitm.plugins.scp.rewrite_command:SCPRewriteCommand"
CVE-2022-29154 = "sshmitm.plugins.scp.cve202229154:CVE202229154"

[project.entry-points."BaseSFTPServerInterface"]
base = "sshmitm.interfaces.sftp:SFTPProxyServerInterface"

[project.entry-points."SFTPHandlerBasePlugin"]
replace_file = "sshmitm.plugins.sftp.replace_file:SFTPProxyReplaceHandler"
store_file = "sshmitm.plugins.sftp.store_file:SFTPHandlerStoragePlugin"

[project.entry-points."RemotePortForwardingBaseForwarder"]
inject = "sshmitm.plugins.tunnel.injectservertunnel:InjectableRemotePortForwardingForwarder"

[project.entry-points."LocalPortForwardingBaseForwarder"]
socks = "sshmitm.plugins.tunnel.socks:SOCKSTunnelForwarder"

[tool.hatch.version]
path = "sshmitm/__init__.py"

[tool.hatch.metadata.hooks.requirements_txt]
files = ["requirements.in"]

[tool.hatch.build]
include = [
    "requirements.in",
    "sshmitm/**/*.py",
    "sshmitm/data/*.*",
]

[tool.hatch.envs.lint]
detached = false
dependencies = [
    "bandit",
    "black",
    "flake8",
    "Flake8-pyproject",
    "mypy",
    "pylint",
]

[tool.hatch.envs.lint.scripts]
check = [
    "bandit -r sshmitm appimage/startapp.py",
    "black --check sshmitm appimage/startapp.py",
    "flake8 sshmitm appimage/startapp.py",
    "pylint sshmitm appimage/startapp.py",
    "mypy sshmitm appimage/startapp.py",
]

[tool.hatch.envs.docs]
detached = false

[tool.hatch.envs.docs.scripts]
build = [
    "pip install -r doc/requirements.txt",
    "sphinx-apidoc -T -e -M -d 1 -o doc/api sshmitm",
    "sphinx-build doc build/html",
]

[tool.hatch.envs.appimage]
detached = false

[tool.hatch.envs.appimage.scripts]
build = [
    "appimage/build.sh",
]

[tool.flake8]
ignore = ["E203", "E501", "W503"]

[tool.mypy]
strict = true
install_types = true
non_interactive = true

[tool.pylint]
disable = [
    "duplicate-code",
    "line-too-long",
    "missing-module-docstring",
    "missing-class-docstring",
    "missing-function-docstring",
    "fixme",
    "too-few-public-methods",
    "too-many-branches",
    "too-many-instance-attributes",
    "too-many-statements",
    "too-many-locals",
    "too-many-return-statements"
]

[tool.pylint.MASTER]
load-plugins = "pylint.extensions.docparams"

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "D",       # Docstring related
    "E501",    # Line too long
    "PLR0912", # Too many branches
    "COM812",  # Trailing comma missing
    "FA100",   # Missing from __future__ import annotations
    "FIX002",  # Line contains TODO, consider resolving the issue
    "T201",    # `print` found
    "ANN101",  # Missing type annotation for `self` in method
    "ANN102",  # Missing type annotation for `cls` in classmethod
    "PTH118",  # `os.path.join()` should be replaced by `Path` with `/` operator
    "PTH111",  # `os.path.expanduser()` should be replaced by `Path.expanduser()`
    "PTH113",  # `os.path.isfile()` should be replaced by `Path.is_file()`
    "PTH116",  # `os.stat()` should be replaced by `Path.stat()`, `Path.owner()`, or `Path.group()`
    "PTH103",  # `os.makedirs()` should be replaced by `Path.mkdir(parents=True)`
    "PTH123",  # `open()` should be replaced by `Path.open()`
    "PTH107",  # `os.remove()` should be replaced by `Path.unlink()`
    "PTH119",  # `os.path.basename()` should be replaced by `Path.name`
    "PLR0913", # Too many arguments in function definition
    "S104",    # Possible binding to all interfaces
    "SLF001",  # Private member accessed: `_indent`
    "PLR0911", # Too many return statements
    "TRY400",  # Use `logging.exception` instead of `logging.error`
    "UP024",   # Replace aliased errors with `OSError`,
    "FBT002",  # Boolean default positional argument in function definition
    "ANN401",  # Dynamically typed expressions (typing.Any) are disallowed
    "PLR2004", # Magic value used in comparison
    "FBT001",  # Boolean-typed positional argument in function definition
    "FBT003",  # Boolean positional value in function call
    "TRY301",  # Abstract `raise` to an inner function
    "N818",    # Exception name `MissingHostException` should be named with an Error suffix
]
[tool.ruff.lint.per-file-ignores]
"sshmitm/workarounds/monkeypatch.py" = ["ALL"]
"sshmitm/workarounds/transport.py" = ["ALL"]
